--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
   "functions": {
     "api/analyze.js": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 1024
     }
   },
+  "rewrites": [
+    {
+      "source": "/utils/(.*)",
+      "destination": "/utils/$1"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
@@ -14,7 +21,7 @@
         },
         {
           "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, OPTIONS"
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
         },
         {
           "key": "Access-Control-Allow-Headers",
