--- a/vercel.json
+++ b/vercel.json
@@ -5,15 +5,10 @@
       "maxDuration": 60
     }
   },
-  "headers": [
+  "routes": [
     {
-      "source": "/",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/html; charset=utf-8"
-        }
-      ]
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
